--- a/index.html
+++ b/index.html
@@ -104,12 +104,12 @@ button[type="submit"]:hover {
       var id = document.getElementById("idInput").value; // Get ID from input box
 
       if (id) { // Check if ID is entered
-        var baseLink = "https://putn13.";
-        var address = "putn" + id;
+        var baseLink = "https://putm34c";
+        var address = "PUTM34CU" + id + "01";
         copyToClipboard(address);
-        window.open(baseLink + id + "/", "_blank"); // Open in new tab
+        window.open(baseLink + id + "01/:4343", "_blank"); // Open in new tab
       } else {
-        alert("Please enter an ID."); // Alert if no ID is entered
+        alert("Vlož číslo lisu."); // Alert if no ID is entered
       }
     }
 
