--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ button[type="submit"]:hover {
         var baseLink = "https://putm34c";
         var address = "PUTM34CU" + id + "01";
         copyToClipboard(address);
-        window.open(baseLink + id + "01/:4343", "_blank"); // Open in new tab
+        window.open(baseLink + id + "01:4343/", "_blank"); // Open in new tab
       } else {
         alert("Vlož číslo lisu."); // Alert if no ID is entered
       }
