--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ button[type="submit"]:hover {
       var id = document.getElementById("idInput").value; // Get ID from input box
 
       if (id) { // Check if ID is entered
-        var baseLink = "https://putm34c";
+        var baseLink = "https://putm34cu";
         var address = "PUTM34CU" + id + "01";
         copyToClipboard(address);
         window.open(baseLink + id + "01:4343/", "_blank"); // Open in new tab
