--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@ button[type="submit"]:hover {
 </head>
 <body>
   <h1>DynLink</h1>
-  <p>Vlož číslo lisu a klikni "Pripojiť" alebo stlať Enter aby sa ti otvorila nová karta a skopírovala doména:</p>
-
+  <p>Vlož číslo lisu.</p>
+  <a href="https://putm30ctts1101:4343/">Kliknite pre otvorenie HL. DOPRAVNÍK</a>
   <form onsubmit="handleFormSubmit(event)">
     <label for="idInput">ID:</label>
     <input type="text" id="idInput" name="id" required onkeypress="handleEnterPress(event)"> <button type="submit">Dúfam, že mi to potvrdí.</button>
