--- a/index.html
+++ b/index.html
@@ -123,8 +123,7 @@ function handleEnterPress(event) {
 <body>
   <h1>DynLink</h1>
   <p>Vlož číslo lisu.</p>
-  <a href="https://putm30ctts1101:4343/" onclick="copyToClipboard('const usernameInput = document.getElementById(\'username_input\'); usernameInput.value = \"PlantAdmin_PU"; // Vyplní password const passwordInput = document.getElementById(\'password_input\'); passwordInput.value = \"Pn3umat1ka"; // Vyplní domain const domainInput = document.getElementById(\'domain_input\'); domainInput.value = \"putm30ctts1101";'); return true;">Kliknite pre otvorenie HL. DOPRAVNÍK</a>
-  <form onsubmit="handleFormSubmit(event)">
+<a href="https://putm30ctts1101:4343/" onclick="copyToClipboard('const usernameInput = document.getElementById(\'username_input\'); usernameInput.value = \"example_username\"; // Vyplní password const passwordInput = document.getElementById(\'password_input\'); passwordInput.value = \"example_password\"; // Vyplní domain const domainInput = document.getElementById(\'domain_input\'); domainInput.value = \"example_domain\";'); return true;">Kliknite pre otvorenie HL. DOPRAVNÍK</a>  <form onsubmit="handleFormSubmit(event)">
     <label for="idInput">ID:</label>
     <input type="text" id="idInput" name="id" required onkeypress="handleEnterPress(event)"> <button type="submit">Dúfam, že mi to potvrdí.</button>
   </form>
