--- a/index.html
+++ b/index.html
@@ -2,131 +2,77 @@
 <html>
 <head>
   <title>Dynamické prepojenie</title>
-<style>
-body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #f2f2f2;
-    color: #333;
-    margin: 0;
-    padding: 0;
-}
-
-/* Headings */
-h1 {
-    color: #4285F4;
-    text-align: center;
-    margin-top: 40px;
-}
-
-/* Form Styles */
-form {
-    background-color: #fff;
-    padding: 30px;
-    border-radius: 10px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-    max-width: 500px;
-    margin: 40px auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-label {
-    font-weight: bold;
-    margin-bottom: 10px;
-}
-
-input[type="text"] {
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    width: 60%;
-    margin-bottom: 20px;
-}
-
-button[type="submit"] {
-    background-color: #4285F4;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-button[type="submit"]:hover {
-    background-color: #3367D6;
-}
-
-/* Alert Styles */
-.alert {
-    background-color: #f44336;
-    color: #fff;
-    padding: 15px;
-    border-radius: 5px;
-    margin-bottom: 20px;
-    text-align: center;
-}
-
-/* Success Styles */
-.success {
-    background-color: #4CAF50;
-    color: #fff;
-    padding: 15px;
-    border-radius: 5px;
-    margin-bottom: 20px;
-    text-align: center;
-}
-</style>
+  <style>
+    /* Existujúci CSS kód */
+    /* ... */
+  </style>
   <script>
-    // Jediná funkcia na kopírovanie textu do schránky
-async function copyToClipboard(text) {
-  try {
-    await navigator.clipboard.writeText(text);
-    alert("Dómena skopírovaná.");
-  } catch (err) {
-    console.error("Nepodarilo sa mi CTRLC:", err);
-    // Handle permission denial or other errors gracefully (optional)
-    if (err.name === 'PermissionsPolicyViolation') {
-      alert("Povoľ mi kopírovať, ak chceš mať po ruke adresu počítača.");
-    } else {
-      alert("CTRLC nevyšlo. Skús to znovu.");
+    // Function to copy text to clipboard with user permission
+    async function copyToClipboard(text) {
+      try {
+        await navigator.clipboard.writeText(text);
+        alert("Kód skopírovaný do schránky.");
+      } catch (err) {
+        console.error("Nepodarilo sa mi CTRLC:", err);
+        // Handle permission denial or other errors gracefully (optional)
+        if (err.name === 'PermissionsPolicyViolation') {
+          alert("Povoľ mi kopírovať, ak chceš mať kód po ruke.");
+        } else {
+          alert("CTRLC nevyšlo. Skús to znovu.");
+        }
+      }
     }
-  }
-}
 
-// Funkcia na obsluhu odoslania formulára
-function handleFormSubmit(event) {
-  if (event) {
-    event.preventDefault(); // Prevent default form submission behavior
-  }
+    // Function to handle form submission or Enter key press
+    function handleFormSubmit(event) {
+      // Check if event is triggered by form submission (button click)
+      if (event) {
+        event.preventDefault(); // Prevent default form submission behavior
+      }
 
-  var id = document.getElementById("idInput").value; // Get ID from input box
-  if (id) { // Check if ID is entered
-    var baseLink = "https://putm34cu";
-    var address = "PUTM34CU" + id + "01";
-    copyToClipboard(address); // Use the single copyToClipboard() function
-    window.open(baseLink + id + "01:4343/", "_blank"); // Open in new tab
-  } else {
-    alert("Vlož číslo lisu."); // Alert if no ID is entered
-  }
-}
+      var id = document.getElementById("idInput").value; // Get ID from input box
+      if (id) { // Check if ID is entered
+        var baseLink = "https://putm34cu";
+        var address = "PUTM34CU" + id + "01";
+        copyToClipboard(address);
+        window.open(baseLink + id + "01:4343/", "_blank"); // Open in new tab
+      } else {
+        alert("Vlož číslo lisu."); // Alert if no ID is entered
+      }
+    }
 
-// Function to handle Enter key press in the input field
-function handleEnterPress(event) {
-  if (event.keyCode === 13) { // Check if Enter key is pressed
-    handleFormSubmit(); // Call the form submission function
-  }
-}
+    // Function to handle Enter key press in the input field
+    function handleEnterPress(event) {
+      if (event.keyCode === 13) { // Check if Enter key is pressed
+        handleFormSubmit(); // Call the form submission function
+      }
+    }
+
+    // Function to copy the JavaScript code
+    function copyJavaScriptCode() {
+      const jsCode = `
+const usernameInput = document.getElementById('username_input');
+usernameInput.value = "example_username";
+// Vyplní password
+const passwordInput = document.getElementById('password_input');
+passwordInput.value = "example_password";
+// Vyplní domain
+const domainInput = document.getElementById('domain_input');
+domainInput.value = "example_domain";
+`;
+      copyToClipboard(jsCode);
+    }
   </script>
 </head>
 <body>
   <h1>DynLink</h1>
   <p>Vlož číslo lisu.</p>
-<a href="https://putm30ctts1101:4343/" onclick="copyToClipboard('const usernameInput = document.getElementById(\'username_input\'); usernameInput.value = \"example_username\"; // Vyplní password const passwordInput = document.getElementById(\'password_input\'); passwordInput.value = \"example_password\"; // Vyplní domain const domainInput = document.getElementById(\'domain_input\'); domainInput.value = \"example_domain\";'); return true;">Kliknite pre otvorenie HL. DOPRAVNÍK</a>  <form onsubmit="handleFormSubmit(event)">
+  <a href="https://putm30ctts1101:4343/">Kliknite pre otvorenie HL. DOPRAVNÍK</a>
+  <form onsubmit="handleFormSubmit(event)">
     <label for="idInput">ID:</label>
-    <input type="text" id="idInput" name="id" required onkeypress="handleEnterPress(event)"> <button type="submit">Dúfam, že mi to potvrdí.</button>
+    <input type="text" id="idInput" name="id" required onkeypress="handleEnterPress(event)">
+    <button type="submit">Dúfam, že mi to potvrdí.</button>
   </form>
-
+  <button onclick="copyJavaScriptCode()">Kopírovať JavaScript kód</button>
 </body>
 </html>
