--- a/index.html
+++ b/index.html
@@ -2,9 +2,81 @@
 <html>
 <head>
   <title>Dynamické prepojenie</title>
-  <style>
-    /* Existujúci CSS kód */
-    /* ... */
+<style>
+  body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f2f2f2;
+      color: #333;
+      margin: 0;
+      padding: 0;
+  }
+  
+  /* Headings */
+  h1 {
+      color: #4285F4;
+      text-align: center;
+      margin-top: 40px;
+  }
+  
+  /* Form Styles */
+  form {
+      background-color: #fff;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+      max-width: 500px;
+      margin: 40px auto;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+  }
+  
+  label {
+      font-weight: bold;
+      margin-bottom: 10px;
+  }
+  
+  input[type="text"] {
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      width: 60%;
+      margin-bottom: 20px;
+  }
+  
+  button[type="submit"] {
+      background-color: #4285F4;
+      color: #fff;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+  }
+  
+  button[type="submit"]:hover {
+      background-color: #3367D6;
+  }
+  
+  /* Alert Styles */
+  .alert {
+      background-color: #f44336;
+      color: #fff;
+      padding: 15px;
+      border-radius: 5px;
+      margin-bottom: 20px;
+      text-align: center;
+  }
+  
+  /* Success Styles */
+  .success {
+      background-color: #4CAF50;
+      color: #fff;
+      padding: 15px;
+      border-radius: 5px;
+      margin-bottom: 20px;
+      text-align: center;
+  }
   </style>
   <script>
     // Function to copy text to clipboard with user permission
