--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
     // Function to copy the JavaScript code
     function copyJavaScriptCode() {
       const jsCode = `
-const usernameInput = document.getElementById('username_input');
+const usernameInput = document.getElementById('PlantAdmin_PU');
 usernameInput.value = "example_username";
 // Vyplní password
-const passwordInput = document.getElementById('password_input');
+const passwordInput = document.getElementById('Pn3umatika');
 passwordInput.value = "example_password";
 // Vyplní domain
-const domainInput = document.getElementById('domain_input');
+const domainInput = document.getElementById('putm34cug5401');
 domainInput.value = "example_domain";
 `;
       copyToClipboard(jsCode);
